force-app/main/default/objects/Contact/fields/JaAtuouCcomoHeroi__c.field-meta.xml
<CustomField>
    <fullName>JaAtuouCcomoHeroi__c</fullName>
    <description>Responder se candidato ja atuou como herói</description>
    <inlineHelpText>Responder se candidato ja atuou como herói</inlineHelpText>
    <label>Já Atuou como Herói</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
            <value>
                <fullName>Não Sei</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>