force-app/main/default/objects/Contact/fields/Niveldoheroi__c.field-meta.xml
<CustomField>
    <fullName>Niveldoheroi__c</fullName>
    <description>Nível de senioridade do Herói</description>
    <inlineHelpText>Escolha o Nível do Herói</inlineHelpText>
    <label>Nível do herói</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aspira</fullName>
            </value>
            <value>
                <fullName>Junior</fullName>
            </value>
            <value>
                <fullName>Pleno</fullName>
            </value>
            <value>
                <fullName>Senior</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>