force-app/main/default/objects/Contact/fields/Nomedeguerra__c.field-meta.xml
<CustomField>
    <fullName>Nomedeguerra__c</fullName>
    <description>Nome de guerra do herói</description>
    <inlineHelpText>Nome de guerra do herói</inlineHelpText>
    <label>Nome de guerra</label>
    <length>100</length>
    <type>Text</type>
</CustomField>