force-app/main/default/objects/Contact/fields/NumeroBatalhas__c.field-meta.xml
<CustomField>
    <fullName>NumeroBatalhas__c</fullName>
    <description>exibe o numero de 
batalhas em que o contato esta participando</description>
    <inlineHelpText>exibe o numero de 
batalhas em que o contato esta participando</inlineHelpText>
    <label>Numero Batalhas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>