force-app/main/default/objects/Contact/fields/Planeta__c.field-meta.xml
<CustomField>
    <fullName>Planeta__c</fullName>
    <description>Digite de qual planeta você veio</description>
    <inlineHelpText>Seu Planeta Natal</inlineHelpText>
    <label>Planeta</label>
    <length>80</length>
    <type>Text</type>
</CustomField>