force-app/main/default/objects/Contact/fields/Status_Candidato__c.field-meta.xml
<CustomField>
    <fullName>Status_Candidato__c</fullName>
    <description>Status do contato ou herói após o lead</description>
    <inlineHelpText>Status do contato ou herói após o lead</inlineHelpText>
    <label>Status Candidato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aprovado direto</fullName>
            </value>
            <value>
                <fullName>Em Analise</fullName>
                <default>true</default>
                <label>Em Analise</label>
            </value>
            <value>
                <fullName>Em treinamento</fullName>
            </value>
            <value>
                <fullName>Reprovado em treinamento</fullName>
            </value>
            <value>
                <fullName>Reprovado na Analise</fullName>
            </value>
            <value>
                <fullName>Reprovado na Analise do Gestor</fullName>
            </value>
            <value>
                <fullName>Aprovado em Treinamento</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>