force-app/main/default/objects/Contact/fields/TotaldeHabilidades__c.field-meta.xml
<CustomField>
    <fullName>TotaldeHabilidades__c</fullName>
    <label>Total de Habilidades</label>
    <summaryForeignKey>HabilidadesdoContato__c.Contato__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>