force-app/main/default/objects/Contact/recordTypes/Heroi.recordType-meta.xml
<RecordType>
    <fullName>Heroi</fullName>
    <active>true</active>
    <label>Heroi</label>
</RecordType>