force-app/main/default/objects/Contact/validationRules/ExigePlanetaQuandoNaoeTeraqueo.validationRule-meta.xml
<ValidationRule>
    <fullName>ExigePlanetaQuandoNaoeTeraqueo</fullName>
    <active>true</active>
    <description>Favor Preencher este campo, Sempre que o possível Herói NÂO e da terra</description>
    <errorConditionFormula>AND(
				NOT(isTerraqueo__c),
	ISBLANK( Planeta__c )
	)</errorConditionFormula>
    <errorDisplayField>Planeta__c</errorDisplayField>
    <errorMessage>Favor Preencher este campo, Sempre que o possível Herói NÂO e da terra</errorMessage>
</ValidationRule>